--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://abulhashim.github.io/Intro-Component-with-Signup-Form/",
-  "name": "tailwind-js",
+  "name": "Intro-Component-with-Signup-Form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
